--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "use-web-storage",
+  "name": "@johntitor/use-web-storage-hook",
   "version": "1.0.0",
   "description": "React hook for smart localStorage/sessionStorage with expiry and cross-tab sync.",
   "main": "dist/use-web-storage.cjs.js",
@@ -33,6 +33,7 @@
     "conventional-changelog-conventionalcommits": "^9.1.0",
     "semantic-release": "^24.2.9",
     "typescript": "^4.0.0",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vite-plugin-dts": "^4.5.4"
   }
 }
