--- a/package.json
+++ b/package.json
@@ -34,9 +34,16 @@
   "author": "John Titor <authory>",
   "license": "Copyleft",
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.6",
+    "@semantic-release/npm": "^12.0.2",
+    "@semantic-release/release-notes-generator": "^14.1.0",
     "@vitejs/plugin-react": "^3.0.0",
+    "semantic-release": "^24.2.9",
+    "typescript": "^4.0.0",
     "vite": "^4.0.0",
-    "vite-plugin-dts": "^4.5.4",
-    "typescript": "^4.0.0"
+    "vite-plugin-dts": "^4.5.4"
   }
 }
