--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@semantic-release/npm": "^12.0.2",
     "@semantic-release/release-notes-generator": "^14.1.0",
     "@vitejs/plugin-react": "^3.0.0",
+    "conventional-changelog-conventionalcommits": "^9.1.0",
     "dotenv": "^17.2.3",
     "semantic-release": "^24.2.9",
     "typescript": "^4.0.0",
